@@ -340,7 +340,18 @@ show_jobs(const char *command,		/* I - Command name */
   char		resource[1024];		/* Resource string */
   char		rankstr[255];		/* Rank string */
   char		namestr[1024];		/* Job name string */
-  static const char *ranks[10] =	/* Ranking strings */
+  static const char * const jobattrs[] =/* Job attributes we want to see */
+		{
+		  "copies",
+		  "job-id",
+		  "job-k-octets",
+		  "job-name",
+		  "job-originating-user-name",
+		  "job-printer-uri",
+		  "job-priority",
+		  "job-state"
+		};
+  static const char * const ranks[10] =	/* Ranking strings */
 		{
 		  "th",
 		  "st",
@@ -368,6 +379,7 @@ show_jobs(const char *command,		/* I - Command name */
   *    attributes-charset
   *    attributes-natural-language
   *    job-uri or printer-uri
+  *    requested-attributes
   */
 
   request = ippNewRequest(id ? IPP_GET_JOB_ATTRIBUTES : IPP_GET_JOBS);
@@ -396,6 +408,10 @@ show_jobs(const char *command,		/* I - Command name */
                  "requesting-user-name", NULL, user);
     ippAddBoolean(request, IPP_TAG_OPERATION, "my-jobs", 1);
   }
+
+  ippAddStrings(request, IPP_TAG_OPERATION, IPP_TAG_KEYWORD,
+                "requested-attributes",
+                (int)(sizeof(jobattrs) / sizeof(jobattrs[0])), NULL, jobattrs);
 
  /*
   * Do the request and get back a response...
